--- a/css-utilities/sass/main.scss
+++ b/css-utilities/sass/main.scss
@@ -2,6 +2,7 @@
 @import "./base/reset", "./base/typography";
 @import "./components/buttons";
 @import "./components/dropdown";
+@import "./components/checkbox";
 @import "./components/input";
 @import "./layout/grid";
 @import "./utils/utils"
