--- a/css-utilities/sass/abstracts/_mixins.scss
+++ b/css-utilities/sass/abstracts/_mixins.scss
@@ -265,3 +265,15 @@
     }
 }
 }
+
+@mixin checkbox-variant($color, $value) {
+    &:checked+label:before {
+        background-color: $value;
+        background-size: 0.75em;
+        color: rgba(0, 0, 0, 0.075);
+    }
+
+    &:focus+label:before {
+        box-shadow: 0 0 0.04em, 0 0.06em 0.16em -0.03em transparent inset, 0 0 0 0.07em rgba(0, 0, 0, 0.1) inset, 0 0 0 3.3px rgba($value, 0.55), 0 0 0 5px rgba($value, 0.3);
+    }
+}
