--- a/css-utilities/sass/abstracts/_variables.scss
+++ b/css-utilities/sass/abstracts/_variables.scss
@@ -93,6 +93,8 @@ $error-message-font-size: 12px;
 $error-message-line-height: 15px;
 $error-message-margin: 2px 0 0;
 
+//toggle
+$toggle-background: #CECECE;
 
 
 
