--- a/css-utilities/sass/components/_checkbox.scss
+++ b/css-utilities/sass/components/_checkbox.scss
@@ -104,7 +104,7 @@ $color1: #f4f4f4;
                 width: 1.4em;
                 height: 1.4em;
                 position: relative;
-                top: -0.2em;
+                // top: -0.2em;
                 margin-right: 1em;
                 vertical-align: middle;
                 cursor: pointer;
