--- a/css-utilities/sass/main.scss
+++ b/css-utilities/sass/main.scss
@@ -3,6 +3,9 @@
 @import "./components/buttons";
 @import "./components/dropdown";
 @import "./components/checkbox";
+@import "./components/date";
+@import "./components/customRange";
+@import "./components/notification";
 @import "./components/input";
 @import "./layout/grid";
 @import "./utils/utils"
