--- a/css-utilities/sass/abstracts/_mixins.scss
+++ b/css-utilities/sass/abstracts/_mixins.scss
@@ -206,6 +206,54 @@
     }
 }
 
+//notification
+@mixin notification-variant($variant, $value) {
+
+
+
+    &.#{$variant} {
+        &::before {
+            content: "";
+            position: absolute;
+            width: 10px;
+            height: 100%;
+            background-color: $value;
+            left: 0;
+            top: 0;
+        }
+
+        div {
+            h6 {
+                color: $value !important;
+            }
+        }
+
+        &.background {
+            // background-color: lighten($value, 10%);
+            background-color: rgba($color: $value, $alpha: .3)
+        }
+
+        div::before {
+            content: "";
+            position: absolute;
+            width: 25px;
+            height: 100%;
+            left: -2rem;
+            top: 0;
+            background:
+                if($variant ==error,
+                    url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="22" height="22"><path d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 10.5858L9.17157 7.75736L7.75736 9.17157L10.5858 12L7.75736 14.8284L9.17157 16.2426L12 13.4142L14.8284 16.2426L16.2426 14.8284L13.4142 12L16.2426 9.17157L14.8284 7.75736L12 10.5858Z" fill="rgba(254,80,80,1)"></path></svg>') no-repeat center center,
+                    if($variant ==success,
+                        url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="22" height="22"><path d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM11.0026 16L18.0737 8.92893L16.6595 7.51472L11.0026 13.1716L8.17421 10.3431L6.75999 11.7574L11.0026 16Z" fill="rgba(56,201,118,1)"></path></svg>') no-repeat center center,
+                        if($variant ==warning,
+                            url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="22" height="22"><path d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM11 15V17H13V15H11ZM11 7V13H13V7H11Z" fill="rgba(255,184,77,1)"></path></svg>') no-repeat center center,
+
+                            url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="22" height="22"><path d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM11 11V17H13V11H11ZM11 7V9H13V7H11Z" fill="rgba(67,152,254,1)"></path></svg>') no-repeat center center))) //last url is not valid, it will for without success/error/warning
+        }
+    }
+
+}
+
 // scss-start btn-size-mixin
 @mixin button-size($padding-y, $padding-x, $font-size, $border-radius, $small-device) {
 
