--- a/css-utilities/sass/main.scss
+++ b/css-utilities/sass/main.scss
@@ -5,6 +5,7 @@
 @import "./components/checkbox";
 @import "./components/date";
 @import "./components/customRange";
+@import "./components/tooltip";
 @import "./components/notification";
 @import "./components/input";
 @import "./layout/grid";
