tooltip added and notification added

--- a/css-utilities/sass/components/_buttons.scss
+++ b/css-utilities/sass/components/_buttons.scss
@@ -75,9 +75,11 @@
                 #fff, // hover text color
                 lighten($value, 10%), // hover background color
                 lighten($value, 10%)); // hover border color
+            // width: calc(75%-25px);
         }
     }
 }
+
 
 // scss btn-variant-loops
 @each $color, $value in $colors {
