--- a/css-utilities/sass/main.scss
+++ b/css-utilities/sass/main.scss
@@ -6,6 +6,7 @@
 @import "./components/date";
 @import "./components/customRange";
 @import "./components/tooltip";
+@import "./components/tab";
 @import "./components/notification";
 @import "./components/input";
 @import "./layout/grid";
